.k8s/admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-admin
  namespace: iot-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-admin
  template:
    metadata:
      labels:
        app: iot-admin
    spec:
      containers:
      - name: iot-admin
        image: ghcr.io/raghiba/iot-telemetry-admin:latest
        ports:
        - containerPort: 8081
