.k8s/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-admin
  namespace: iot-telemetry
spec:
  selector:
    app: iot-admin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
  type: ClusterIP
